syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package user;

service User{
  rpc SaveUser (UserDto) returns (google.protobuf.Empty);
  /*
  rpc GetUsers(google.protobuf.Empty) returns (stream UserDto);
  rpc GetUserByGovId (UserGovIdRequest) returns (stream UserDto);
  rpc GetUserByStudentId (UserStudentIdRequest) returns (stream UserDto); 
  */
}

message UserDto {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue surname = 2;
  google.protobuf.StringValue gov_id = 3;
  google.protobuf.StringValue student_id = 4;
  google.protobuf.StringValue email = 5;
  google.protobuf.StringValue password = 6;
  google.protobuf.StringValue role = 7;
  google.protobuf.StringValue phone = 8;
}